3.3.0/_sources/gallery/images_contours_and_fields/contour_label_demo.rst.txt
.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_images_contours_and_fields_contour_label_demo.py>`     to download the full example code
    .. rst-class:: sphx-glr-example-title

    .. _sphx_glr_gallery_images_contours_and_fields_contour_label_demo.py:


==================
Contour Label Demo
==================

Illustrate some of the more advanced things that one can do with
contour labels.

See also the :doc:`contour demo example
</gallery/images_contours_and_fields/contour_demo>`.


.. code-block:: default


    import matplotlib
    import numpy as np
    import matplotlib.ticker as ticker
    import matplotlib.pyplot as plt








Define our surface


.. code-block:: default


    delta = 0.025
    x = np.arange(-3.0, 3.0, delta)
    y = np.arange(-2.0, 2.0, delta)
    X, Y = np.meshgrid(x, y)
    Z1 = np.exp(-X**2 - Y**2)
    Z2 = np.exp(-(X - 1)**2 - (Y - 1)**2)
    Z = (Z1 - Z2) * 2








Make contour labels using creative float classes
Follows suggestion of Manuel Metz


.. code-block:: default


    # Define a class that forces representation of float to look a certain way
    # This remove trailing zero so '1.0' becomes '1'


    class nf(float):
        def __repr__(self):
            s = f'{self:.1f}'
            return f'{self:.0f}' if s[-1] == '0' else s


    # Basic contour plot
    fig, ax = plt.subplots()
    CS = ax.contour(X, Y, Z)

    # Recast levels to new class
    CS.levels = [nf(val) for val in CS.levels]

    # Label levels with specially formatted floats
    if plt.rcParams["text.usetex"]:
        fmt = r'%r \%%'
    else:
        fmt = '%r %%'

    ax.clabel(CS, CS.levels, inline=True, fmt=fmt, fontsize=10)




.. image:: /gallery/images_contours_and_fields/images/sphx_glr_contour_label_demo_001.png
    :alt: contour label demo
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    <a list of 7 text.Text objects>



Label contours with arbitrary strings using a dictionary


.. code-block:: default


    fig1, ax1 = plt.subplots()

    # Basic contour plot
    CS1 = ax1.contour(X, Y, Z)

    fmt = {}
    strs = ['first', 'second', 'third', 'fourth', 'fifth', 'sixth', 'seventh']
    for l, s in zip(CS1.levels, strs):
        fmt[l] = s

    # Label every other level using strings
    ax1.clabel(CS1, CS1.levels[::2], inline=True, fmt=fmt, fontsize=10)




.. image:: /gallery/images_contours_and_fields/images/sphx_glr_contour_label_demo_002.png
    :alt: contour label demo
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    <a list of 3 text.Text objects>



Use a Formatter


.. code-block:: default


    fig2, ax2 = plt.subplots()

    CS2 = ax2.contour(X, Y, 100**Z, locator=plt.LogLocator())
    fmt = ticker.LogFormatterMathtext()
    fmt.create_dummy_axis()
    ax2.clabel(CS2, CS2.levels, fmt=fmt)
    ax2.set_title("$100^Z$")

    plt.show()




.. image:: /gallery/images_contours_and_fields/images/sphx_glr_contour_label_demo_003.png
    :alt: $100^Z$
    :class: sphx-glr-single-img





------------

References
""""""""""

The use of the following functions, methods and classes is shown
in this example:


.. code-block:: default


    matplotlib.axes.Axes.contour
    matplotlib.pyplot.contour
    matplotlib.axes.Axes.clabel
    matplotlib.pyplot.clabel
    matplotlib.ticker.LogFormatterMathtext
    matplotlib.ticker.TickHelper.create_dummy_axis




.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    <function TickHelper.create_dummy_axis at 0x7fda9ef091f0>




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  1.336 seconds)


.. _sphx_glr_download_gallery_images_contours_and_fields_contour_label_demo.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: contour_label_demo.py <contour_label_demo.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: contour_label_demo.ipynb <contour_label_demo.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
